--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -54,6 +54,9 @@
       }    
     }
   .row .col-3{
+    & p{
+        color: $black;
+    }
     @include pad{
         width: 50%;
     }
@@ -61,7 +64,7 @@
         width: 100%;
     }
     & h4{
-    text-align: center;    
+      text-align: center;    
     }  
       .intro-list-img{
         width: 83px;
